--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
   geolocator: ^10.1.0
+  geocoding: ^2.1.1
   image_picker: ^1.0.7
-  path_provider: ^2.1.2
+  firebase_storage: ^11.6.0
+  firebase_app_check: ^0.2.1+10
 
 dev_dependencies:
   flutter_test:
