--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.24.2
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  shared_preferences: ^2.2.2
   image_picker: ^1.0.7
   firebase_storage: ^11.6.0
   firebase_app_check: ^0.2.1+10
